# media_lens

./: .coverage  .dockerignore  .env.template  .env_tplt  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER_README.md  Dockerfile  Dockerfile.local  PARTITION_3_CHECKLIST.md  VARIANT_COMPARISON_TEMPLATE.md  container-startup.sh  context.md  debug_gcp_auth.sh  docker-compose.local.yml  docker-compose.yml  gitleaks-report.json  install-new-startup-script.sh  migrate_directory_structure.py  monitor-disk-space.sh  process_march23.py  pyproject.toml  pytest.ini  readme-deployment.md  readme.md  recover_march23.py  recover_march23_direct.py  requirements.txt  restart_container.sh  run_harvest_to_deploy.sh  run_media_lens_scheduled.sh  run_precommit_tests.sh  set_credentials.sh  startup-script.sh  test_migration.py  verify_service_account.sh
.agent/skills/gavel-skill/: SKILL.md
.cicadas/: config.json  index.json  registry.json
.cicadas/active/model-upgrade-eval/: events.jsonl  tokens.json
.cicadas/active/skill-media-lens-gcp-debug/: emergence-config.json  tokens.json
.cicadas/archive/20260218-053503-article-reader/: approach.md  design.md  prd.md  tasks.md  tech-design.md  ux.md
.cicadas/archive/20260326-000453-skill-media-lens-gcp-debug/: .cicadas_metadata.json  README.md  SKILL.md
.cicadas/canon/: product-overview.md  summary.md  tech-overview.md  ux-overview.md
.cicadas/canon/modules/: collection.md  extraction.md  presentation.md  runner.md  storage.md
.claude/skills/: cicadas  media-lens-gcp-debug.md
.claude/skills/media-lens-gcp-debug/: SKILL.md
.deepeval/: .deepeval_telemetry.txt
.gavel/: config.json
config/: ai_config.json
config/templates/: article_template.j2  index_template.j2  template_01.j2  weekly_template.j2
eval/: README.md
eval/data/: daily-summary-scenarios-10.json  daily-summary-scenarios.json  interpretation-scenarios-10.json  interpretation-scenarios.json
evals/: prepare_dataset.py
evals/headline-extraction/config/: agents.json  eval_config.json
evals/headline-extraction/data/: scenarios.json
evals/ref_data/: headline-extraction-scenarios-10.json
local-test-data/may-28/: www.bbc.com-clean.html  www.cnn.com-clean.html  www.foxnews.com-clean.html
local-test-data/may-29/: www.bbc.com-clean.html  www.cnn.com-clean.html  www.foxnews.com-clean.html
notebooks/: tinker.ipynb
scripts/chorus/: README.md  REVERSE_ENGINEERING.md  SKILL.md  implementation.md
scripts/chorus/emergence/: EMERGENCE.md  approach.md  balanced-elicitation.md  clarify.md  tasks.md  tech-design.md  ux.md
scripts/chorus/scripts/: archive.py  branch.py  check.py  init.py  kickoff.py  (+7 more)
src/media_lens/: auditor.py  cloud_entrypoint.py  common.py  deprecation_filter.py  directory_manager.py  job_dir.py  runner.py  scheduler.py  secret_manager.py  storage.py  storage_adapter.py
test/: backfill_test_data.py  conftest.py
test/media_lens/: __init__.py  test_cloud_entrypoint.py  test_common.py  test_job_dir.py  test_runner.py  test_storage.py  test_storage_adapter.py
venv_fresh/: pyvenv.cfg
zzz_local_archive/: MIGRATION_GUIDE.md  migrate_directory_structure.py  test_migration.py
(+41 files in other folders)
